k8s/grist/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist-deployment
  namespace: grist
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  replicas: 1
  selector:
    matchLabels:
      app: grist
  template:
    metadata:
      labels:
        app: grist
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
        runAsGroup: 1001
      volumes:
        - name: grist-data
          persistentVolumeClaim:
            claimName: grist-data-pvc
      containers:
        - name: grist
          image: gristlabs/grist:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
          ports:
            - containerPort: 8484
              name: http
              protocol: TCP
          volumeMounts:
            - name: grist-data
              mountPath: /persist
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
          readinessProbe:
            tcpSocket:
              path: /
              port: 8484
          livenessProbe:
            tcpSocket:
              path: /
              port: 8484
