k8s/grist/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grist-service
  namespace: grist
spec:
  selector:
    app: grist
  ports:
    - protocol: TCP
      port: 8484
      targetPort: 8484
      name: http
  type: ClusterIP
