k8s/grist/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grist-ingress
  namespace: grist
spec:
  ingressClassName: traefik
  rules:
    - host: grist.zefirsroyal.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grist-service
                port:
                  number: 8484
